tests/parser/valid/full_programs/test_fibonacci.src
fn fib(n int) -> int {
    if (n <= 1) {
        return n;
    } else {
        return fib(n - 1) + fib(n - 2);
    }
}

fn main() -> void {
    int x = fib(10);
    return x;
}