tests/parser/invalid/syntax_errors/test_mixed_errors.src
fn broken() -> int {
    if (x > 0
        return x;
    ;;;;
    = 42;
    y = = 10;
    while (i < 10 {
        i = i + 1
    }
    return
}